syntax = "proto3";

message ShowtimeData {
  string date = 1;
  repeated string movies = 2;
}

message Empty {}